# cd_project

./: pyproject.toml
cd_package/: cd.py
cd_package.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_cd_package.py
