[tool.poetry]
name = "cd_package"
version = "0.1.0"
description = ""
authors = ["Yuanbo <sybtxd1@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
Flake8 = "^3.7.9"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
